name:                haskell-scuttlebutt
version:             0.1.0.0
synopsis:            haskell library for the secure scuttlebutt distributed object store
homepage:            https://github.com/bkil-syslogng/haskell-scuttlebutt#readme
license:             BSD3
license-file:        LICENSE
author:              bkil.hu, Peter Ferenc Hajdu
maintainer:          peter.ferenc.hajdu@gmail.com
copyright:           2017 bkil.hu, Peter Ferenc Hajdu
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ssb
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable peer-search-sniffer
  hs-source-dirs:      app
  main-is:             LocalPeerSearchSniffer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scuttlebutt
                     , network
  default-language:    Haskell2010

executable haskell-scuttlebutt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scuttlebutt
  default-language:    Haskell2010

test-suite haskell-scuttlebutt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-scuttlebutt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bkil-syslogng/haskell-scuttlebutt
