name:                haskell-scuttlebutt
version:             0.1.0.0
synopsis:            haskell library for the secure scuttlebutt distributed object store
homepage:            https://github.com/bkil-syslogng/haskell-scuttlebutt#readme
license:             BSD3
license-file:        LICENSE
author:              bkil.hu, Peter Ferenc Hajdu
maintainer:          peter.ferenc.hajdu@gmail.com
copyright:           2017 bkil.hu, Peter Ferenc Hajdu
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ssb
                     , Ssb.Address
                     , Ssb.Patchwork
                     , Ssb.Feed
                     , Ssb.Message
                     , Ssb.Key
                     , Ssb.Discovery
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bytestring-conversion
                     , base64-bytestring
                     , aeson
                     , ed25519
                     , network
                     , containers
  default-language:    Haskell2010

executable signature-snippets
  hs-source-dirs:      snippets
  main-is:             Ed25519Snippets.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scuttlebutt
                     , ed25519
                     , bytestring
  default-language:    Haskell2010

executable peer-search-sender
  hs-source-dirs:      snippets
  main-is:             LocalPeerSearchSender.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scuttlebutt
                     , network
  default-language:    Haskell2010

executable peer-search-sniffer
  hs-source-dirs:      snippets
  main-is:             LocalPeerSearchSniffer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scuttlebutt
                     , network
  default-language:    Haskell2010

executable message-signature-check
  hs-source-dirs:      snippets
  main-is:             SsbSignatureCheck.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , base64-bytestring
                     , ed25519
                     , aeson
                     , haskell-scuttlebutt
  default-language:    Haskell2010

executable feed-reader
  hs-source-dirs:      snippets
  main-is:             FeedReader.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , base64-bytestring
                     , ed25519
                     , aeson
                     , haskell-scuttlebutt
                     , containers
  default-language:    Haskell2010

executable scb-tojson
  hs-source-dirs:      snippets
  main-is:             ToJson.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , base64-bytestring
                     , ed25519
                     , aeson
                     , haskell-scuttlebutt
  default-language:    Haskell2010

executable haskell-scuttlebutt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scuttlebutt
  default-language:    Haskell2010

test-suite haskell-scuttlebutt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-scuttlebutt
                     , hspec
                     , bytestring
                     , aeson
                     , containers
  other-modules:     LocalDiscoverySpec
                   , AddressSpec
                   , KeySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bkil-syslogng/haskell-scuttlebutt
